use subtitles, not titles on index (layout)

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -65,7 +65,7 @@
               {{#each pages}}
                 <li>
                   <a href="{{href}}">{{#if displayOrder}}{{order}} - {{/if}}{{title}}</a>
-                  {{#if heading}}<span class="faint heading">{{heading}}</span>{{/if}}
+                  {{#if subtitle}}<span class="faint heading">{{subtitle}}</span>{{/if}}
                 </li>
               {{/each}}
             </ul>
